// Copyright lowRISC contributors (OpenTitan project).
// Licensed under the Apache License, Version 2.0, see LICENSE for details.
// SPDX-License-Identifier: Apache-2.0

// Definitions for ML-DSA (Module-Lattice-Based Digital Signature Standard).
syntax = "proto3";

package crypto.mldsa;

option go_package = "mldsa_go_pb";

enum MldsaParameterSets {
  MLDSA_PARAMETER_SETS_MLDSA_UNSPECIFIED = 0;
  // ML-DSA-44 (security category 2)
  MLDSA_PARAMETER_SETS_MLDSA_44 = 1;
  // ML-DSA-65 (security category 3)
  MLDSA_PARAMETER_SETS_MLDSA_65 = 2;
  // ML-DSA-87 (security category 5)
  MLDSA_PARAMETER_SETS_MLDSA_87 = 3;
}

message MldsaParams {
  MldsaParameterSets param_sets = 1;
}

message MldsaPublicKey {
  uint32 version = 1;
  MldsaParams params = 2;
  // The raw public key bytes.
  bytes key_value = 3;
}

message MldsaPrivateKey {
  uint32 version = 1;
  MldsaPublicKey public_key = 2;
  // The raw private key bytes.
  bytes key_value = 3;
}
